@@ -45,11 +45,13 @@ libgdk_pixbufincludedir = $(includedir)/gdk-pixbuf
 
 libgdk_pixbuf_la_SOURCES = 	\
 	gdk-pixbuf.c		\
-	gdk-pixbuf-io.c
+	gdk-pixbuf-io.c		\
+	gdk-pixbuf-drawable.c
 
 libgdk_pixbufinclude_HEADERS =	\
 	gdk-pixbuf.h		\
-	gdk-pixbuf-io.h
+	gdk-pixbuf-io.h		\
+	gdk-pixbuf-drawable.h
 
 #
 # The PNG plugin.
